@@ -1,0 +1,11 @@
+<?php
+/*
++ ----------------------------------------------------------------------------+
+|     e107 website system - 
+|
++----------------------------------------------------------------------------+
+*/
+define("LAN_AG_THEMEPREF_00", "Teammember class");
+define("LAN_AG_THEMEPREF_01", "Text at end of Timeline");
+
+?>
